<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_1" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="15dp"
    	android:orientation="vertical" >
	    
	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_rome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/rome_year_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/input_hint_rome"
            android:inputType="textCapCharacters" />

<!--
            <requestFocus />
        </Spinner>
-->

        <EditText
            android:id="@+id/std_year_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/input_hint_std"
            android:inputType="text|number" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    
    	<LinearLayout
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="left|center_vertical|center_horizontal"
    	    android:gravity="center_horizontal" >

        <Button
            android:id="@+id/I_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/I" />

        <Button
            android:id="@+id/V_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/V" />

        <Button
            android:id="@+id/X_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/X" />

        <Button
            android:id="@+id/L_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/L" />

        <Button
            android:id="@+id/C_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/C" />

        <Button
            android:id="@+id/D_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/D" />

        <Button
            android:id="@+id/M_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/M" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/backspace" />

        <Button
            android:id="@+id/toggle_input_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:text="@string/up" />

        <ImageButton
            android:id="@+id/test_ib"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            android:background="@color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/button_test" />

    	</LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/rome_day_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/input_hint_rome"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/std_day_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/input_hint_std"
            android:inputType="text|number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/prefix_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/roman_prefix" />

        <Spinner
            android:id="@+id/beacons_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/roman_beacons" />

        <Spinner
            android:id="@+id/months_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/roman_months" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/bis_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bis" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/std_day_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/std_month_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/std_year_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/execute_button"
        android:layout_width="fill_parent"
        android:layout_height="84dp"
        android:layout_margin="5dp"
        android:text="@string/execute" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/reset" />
    
    </LinearLayout>
</ScrollView>
