<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_1" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="15dp"
    	android:orientation="vertical" >
	    
	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="15dp"
	    android:text="@string/cal_bonon"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	
		
    	<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >

        	<TextView
            	android:id="@+id/textView2"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/year_label"
            	android:textAppearance="?android:attr/textAppearanceMedium" />

        	<EditText
            	android:id="@+id/roman_year_editText"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:ems="10"
            	android:enabled="false"
            	android:focusable="false"
            	android:hint="@string/input_hint_rome"
            	android:inputType="textCapCharacters" />

        	<EditText
            	android:id="@+id/std_year_editText"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:ems="10"
            	android:enabled="false"
            	android:focusable="false"
            	android:hint="@string/input_hint_std"
            	android:inputType="text|number" />

   		</LinearLayout>
   		
    	
    	<HorizontalScrollView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:paddingBottom="10dp"
        	android:paddingTop="5dp" >
    
    		<LinearLayout
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="45dp"
    	    	android:layout_gravity="left|center_vertical|center_horizontal"
    	    	android:gravity="center_horizontal" >

        	<Button
            	android:id="@+id/I_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/i" />

        	<Button
            	android:id="@+id/V_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/v" />

        	<Button
            	android:id="@+id/X_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/x" />

        	<Button
            	android:id="@+id/L_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/l" />

        	<Button
            	android:id="@+id/C_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/c" />

	        <Button
            	android:id="@+id/D_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/d" />
	
        	<Button
	            android:id="@+id/M_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/m" />
	
        	<Button
            	android:id="@+id/back_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/back" />
	
        	<Button
	            android:id="@+id/toggle_button"
            	android:layout_width="45dp"
            	android:layout_height="fill_parent"
            	android:layout_margin="2dp"
            	android:background="@drawable/toggle" />
	
    		</LinearLayout>
    	</HorizontalScrollView>
    
    	<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >

        	<TextView
        	    android:id="@+id/textView3"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/day_label"
            	android:textAppearance="?android:attr/textAppearanceMedium" />
	
        	<EditText
	            android:id="@+id/roman_day_editText"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:ems="10"
            	android:enabled="false"
            	android:focusable="false"
            	android:hint="@string/input_hint_rome"
            	android:inputType="textCapCharacters" />
	
        	<EditText
	            android:id="@+id/std_day_editText"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:ems="10"
            	android:enabled="false"
            	android:focusable="false"
            	android:hint="@string/input_hint_std"
            	android:inputType="text|number" />
	
	    </LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
    	    	android:layout_height="wrap_content" >

    	    		<TextView
    	    		    android:id="@+id/textView4"
    	    		    android:layout_width="wrap_content"
    	    		    android:layout_height="wrap_content"
    	    		    android:text="@string/die_label"
    	    		    android:textAppearance="?android:attr/textAppearanceMedium" />

    	    		<Spinner
    	    		    android:id="@+id/mparts_spinner"
    	    		    android:layout_width="wrap_content"
    	    		    android:layout_height="wrap_content"
    	    		    android:layout_margin="5dp"
    	    		    android:layout_weight="1"
    	    		    android:background="@drawable/my_spinner"
    	    		    android:entries="@array/bonon_month_parts" />

    	    	</LinearLayout>

    	    	<LinearLayout
    	    	    android:layout_width="match_parent"
    	    	    android:layout_height="wrap_content" >

    	    		<TextView
    	    		    android:id="@+id/textView5"
    	    		    android:layout_width="wrap_content"
    	    		    android:layout_height="wrap_content"
    	    		    android:text="@string/or"
    	    		    android:textAppearance="?android:attr/textAppearanceMedium" />

    	    		<Spinner
    	    		    android:id="@+id/mbeacons_spinner"
    	    		    android:layout_width="wrap_content"
    	    		    android:layout_height="wrap_content"
    	    		    android:layout_margin="5dp"
    	    		    android:layout_weight="1"
    	    		    android:background="@drawable/my_spinner"
    	    		    android:entries="@array/bonon_beacons" />

    	    	</LinearLayout>

    	    	<LinearLayout
    	    	    android:layout_width="match_parent"
    	    	    android:layout_height="wrap_content" >

    	    		<TextView
    	    		    android:id="@+id/textView6"
    	    		    android:layout_width="wrap_content"
    	    		    android:layout_height="wrap_content"
    	    		    android:text="@string/month_label"
    	    		    android:textAppearance="?android:attr/textAppearanceMedium" />

    	    		<Spinner
    	    		    android:id="@+id/months_spinner"
    	    		    android:layout_width="wrap_content"
    	    		    android:layout_height="wrap_content"
    	    		    android:layout_margin="5dp"
    	    		    android:layout_weight="1"
    	    		    android:background="@drawable/my_spinner"
    	    		    android:entries="@array/roman_months" />

    	    	</LinearLayout>
    	    	
	        	<LinearLayout
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content" >

        			<TextView
            			android:id="@+id/std_day_textView"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:textAppearance="?android:attr/textAppearanceLarge" />
	
        			<TextView
	            		android:id="@+id/std_month_textView"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        		<TextView
            			android:id="@+id/std_year_textView"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:gravity="center_horizontal"
            			android:textAppearance="?android:attr/textAppearanceLarge" />
	
	   	 		</LinearLayout>
	
	    	<Button
        		android:id="@+id/execute_button"
        		android:layout_width="fill_parent"
        		android:layout_height="75dp"
        		android:layout_marginBottom="5dp"
        		android:background="@drawable/my_button"
        		android:text="@string/execute" />
	
	    	<Button
				android:id="@+id/reset_button"
        		android:layout_width="fill_parent"
        		android:layout_height="55dp"
        		android:layout_marginTop="5dp"
        		android:background="@drawable/my_button"
        		android:text="@string/reset" />
	    
    </LinearLayout>
</ScrollView>